--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -66,12 +66,19 @@
                 <div id="lfzcart" class="shopping_cart shop">
                 </div>
                 <div id="total" class="total">
-                    <div class="total_left">共计 : <span class="J_totalCount">3</span>件商品</div>
-                    <div class="total_right">总价 <span class="J_totalPrice">￥300.8</span></div>
+                    <div class="total_left">已选中：
+                        <span id="totalbook">
+                            <span><strong>0</strong></span>&nbsp;件商品
+                        </span>
+                    </div>
+                    <div id="totalamount" class="total_right">总价
+                        <span class="">￥<span id="totalprice">0</span>&nbsp;元</span>
+                    </div>
                     <div class="clearfix"> </div>
                 </div>
+                <div id="hidden"></div>
                 <div class="login_buttons">
-                    <div class="login_button"><a href="pay">结算</a></div>
+                    <div class="login_button"><a id="pay">结算</a></div>
                     <div class="clearfix"></div>
                 </div>
                 <div class="clearfix"></div>
@@ -91,6 +98,7 @@
 </body>
 <script type="text/javascript" src="/laofuzi/js/base.js"></script>
 <script>
+    //判断顶部导航显示信息
     if(userid != undefined | userid != "" | userid != "null"){
         var infouser = "欢迎! &nbsp;<a href=\"#\" style=\"color:#ff4e00;\">"+ user +"</a>&nbsp;|&nbsp;\n" +
             "<a href=\"login\" style=\"color:#ff4e00;\">退出</a>";
@@ -99,9 +107,10 @@
             "<a href=\"login\" style=\"color:#ff4e00;\">退出</a>";
     }
     $("#userinfo").append(infouser);
+
+    //搜索功能
     function search() {
         var keywords = document.getElementById("search").value;
-        // alert(keywords);
         $.ajax({
             url: "/laofuzi/book/findByCondition",
             type: "POST",
@@ -117,6 +126,7 @@
         });
     }
 
+    //左侧书籍类别
     $(function() {
         var menu1_ul = $('.menu1> li > ul'),
             menu1_a = $('.menu1 > li > a');
@@ -132,93 +142,7 @@
                 $(this).next().stop(true, true).slideUp('normal');
             }
         });
-
     });
-
-    $.ajax({
-        url: "/laofuzi/cart/findByUserId",
-        type: "POST",
-        dataType:"json",
-        contentType : 'application/json',
-        data: JSON.stringify({"userId":userid}),
-        async: false,
-        success: function(result){
-            console.log(result);
-            if(result.length <= 0){
-                var cartpro = "<li class=\"cart_box\">\n" +
-                    "<img src=\"/laofuzi/images/icon_tips2.png\" alt=\"\" />\n" +
-                    "<h3>你的购物车还是空的</h3>\n</li>";
-                $("#lfzcart").append(cartpro);
-            }else{
-                for(var i=0 ; i < result.length; i++ ){
-                    var cartpro = "<li>\n"+
-                        "<input id='checkbox' type=\"checkbox\" name=\"vehicle\" checked='checked'/>"+
-                        "<div class=\"cart_box\">\n<div class=\"message\">\n"+
-                        "<div class=\"alert-close\"> </div>\n" +
-                        "<div class=\"list_img\">"+
-                        "<img src=\""+ result[i].img +"\" class=\"img-responsive\" alt=\"\" /></div>\n" +
-                        "<div class=\"list_desc\">\n<div class=\"shopText\">\n<div class=\"clear\">\n" +
-                        "<h5>"+ result[i].name +"</h5>\n" +
-                        "<h5>作者："+ result[i].author +"</h5>\n</div>\n" +
-                        "<div class=\"clear\">\n<div class=\"plush\">\n" +
-                        "<span id='delcount' onclick='click("+i+")' class=\"J_btnDelCount\">-</span>\n" +
-                        "<input id='inputcount' class=\"J_inputCount\" type=\"text\" value=\""+ result[i].number +"\" />\n" +
-                        "<span id='countadd' onclick='click("+i+")' class=\"J_btnAddCount\">+</span>\n</div>\n" +
-                        "<strong class=\"J_smallTotalPrice\">小计："+ result[i].unitprice*result[i].number+"</strong>\n" +
-                        "<h5>单价："+ result[i].unitprice +"</h5>\n</div>\n" +
-                        "<h5>库存："+ result[i].quantity+"</h5>\n</div>\n</d  >\n</div>\n" +
-                        "<div class=\"clearfix\"></div>\n</div>\n</div>\n</li>";
-                    $("#lfzcart").append(cartpro);
-                }
-            }
-
-            var cbox = document.getElementById("checkbox");
-            for(var i = 0; i < cbox.length; i++){
-                if(cbox[i].checked == "checked"){
-                    console.log(111111,result[i].name);
-                }
-            }
-        }
-    });
-    function click(index){
-        var countadd = document.getElementById("countadd");
-        console.log("ccc:",countadd);
-        // var delcount = document.getElementById("delcount")[i];
-        // var number = document.getElementById("inputcount")[i].value;
-        // console.log("12121:",number);
-        // countadd.onclick = function(){
-        //     number = document.getElementById("inputcount")[i].value;
-        //     document.getElementById("inputcount")[i].value = parseInt(number) + 1;
-        //     number = parseInt(number) + 1;
-        // }
-        // delcount.onclick = function(){
-        //     number = document.getElementById("inputcount")[i].value;
-        //     if(number > 1){
-        //         document.getElementById("inputcount")[i].value = parseInt(number) - 1;
-        //         number = parseInt(number) - 1;
-        //     }
-        // }
-    }
-
-
-
-    $.ajax({
-        url: "/laofuzi/book/findAll",
-        type: "POST",
-        dataType:"json",
-        contentType : 'application/json',
-        data: "",
-        async: false,
-        success: function(result){
-            console.log(result);
-            for(var j = 0; j < 5; j++){
-                var bookpop = "<a href=\"javascript:bookclick("+result[j].categoryId+","+result[j].id+");\">"+
-                    result[j].name +"</a>";
-                $("#popular").append(bookpop);
-            }
-        }
-    });
-
     $.ajax({
         url: "/laofuzi/category/findByParentId",
         type: "POST",
@@ -253,6 +177,206 @@
             }
         }
     });
+
+    //显示用户的购物车信息
+    $.ajax({
+        url: "/laofuzi/cart/findByUserId",
+        type: "POST",
+        dataType:"json",
+        contentType : 'application/json',
+        data: JSON.stringify({"userId":userid}),
+        async: false,
+        success: function(result){
+            console.log(result);
+            if(result.length <= 0){
+                var cartpro = "<li class=\"cart_box\">\n" +
+                    "<img src=\"/laofuzi/images/icon_tips2.png\" alt=\"\" />\n" +
+                    "<h3>你的购物车还是空的</h3>\n</li>";
+                $("#lfzcart").append(cartpro);
+            }else{
+                for(var i=0 ; i < result.length; i++ ){
+                    var cartpro = "<li>\n"+
+                        "<input onclick='cbclick("+i+")' class='vehicle' type=\"checkbox\" name=\"vehicle\"/>"+
+                        "<div class=\"cart_box\">\n<div class=\"message\">\n"+
+                        "<div class=\"alert-close\"> </div>\n" +
+                        "<div class=\"list_img\">"+
+                        "<img src=\""+result[i].img+"\" class=\"img-responsive\" alt=\"\" /></div>\n" +
+                        "<div class=\"list_desc\">\n<div class=\"shopText\">\n<div class=\"clear\">\n" +
+                        "<h5>"+ result[i].name +"</h5>\n" +
+                        "<h5>作者："+ result[i].author +"</h5>\n</div>\n" +
+                        "<div class=\"clear\">\n<div class=\"plush\">\n" +
+                        "<a href='javascript:delclick("+i+")'><span class=\"J_btnDelCount\"> - </span></a>\n" +
+                        "<input class=\"J_inputCount\" type=\"text\" value=\""+ result[i].number +"\" />\n" +
+                        "<a class='ac' href='javascript:addclick("+i+")'><span class=\"J_btnAddCount\"> + </span></a>\n</div>\n" +
+                        "<strong class=\"J_smallTotalPrice\">小计：<span class='smalltotal'>"+ result[i].unitprice*result[i].number+"</span></strong>\n" +
+                        "<h5>单价："+ result[i].unitprice +"</h5>\n</div>\n" +
+                        "<h5>库存："+ result[i].quantity+"</h5>\n</div>\n</d  >\n</div>\n" +
+                        "<div class=\"clearfix\"></div>\n</div>\n</div>\n</li>";
+                    $("#lfzcart").append(cartpro);
+                }
+            }
+        }
+    });
+
+    //数量增加并修改数据库信息
+    function addclick(index){
+        var countadd = document.getElementsByClassName("J_btnAddCount")[index];
+        var number = document.getElementsByClassName("J_inputCount")[index].value;
+        document.getElementsByClassName("J_inputCount")[index].value = parseInt(number) + 1;
+        number = parseInt(number) + 1;
+        $.ajax({
+            url: "/laofuzi/cart/findByUserId",
+            type: "POST",
+            dataType:"json",
+            contentType : 'application/json',
+            data: JSON.stringify({"userId":userid}),
+            async: false,
+            success: function(result){
+                console.log(result);
+                document.getElementsByClassName("smalltotal")[index].innerText = result[index].unitprice*number
+                console.log("12121:",result[index].unitprice*number);
+                $.ajax({
+                    url: "/laofuzi/cart/update",
+                    type: "POST",
+                    dataType:"json",
+                    contentType : 'application/json',
+                    data: JSON.stringify({"id":result[index].id,"userId":userid,
+                        "bookId":bookid,"number":number}),
+                    async: false,
+                    success: function(result){
+                        console.log(result);
+                    }
+                });
+            }
+        });
+    }
+
+    //数量减少并修改数据库信息
+    function delclick(index){
+        var delcount = document.getElementsByClassName("J_btnDelCount")[index];
+        var number = document.getElementsByClassName("J_inputCount")[index].value;
+        console.log("12121:",number);
+        if(number > 1){
+            document.getElementsByClassName("J_inputCount")[index].value = parseInt(number) - 1;
+            number = parseInt(number) - 1;
+        }
+        $.ajax({
+            url: "/laofuzi/cart/findByUserId",
+            type: "POST",
+            dataType:"json",
+            contentType : 'application/json',
+            data: JSON.stringify({"userId":userid}),
+            async: false,
+            success: function(result){
+                console.log(result);
+                document.getElementsByClassName("smalltotal")[index].innerText = result[index].unitprice*number
+                $.ajax({
+                    url: "/laofuzi/cart/update",
+                    type: "POST",
+                    dataType:"json",
+                    contentType : 'application/json',
+                    data: JSON.stringify({"id":result[index].id,"userId":userid,
+                        "bookId":bookid,"number":number}),
+                    async: false,
+                    success: function(result){
+                        console.log(result);
+                    }
+                });
+            }
+        });
+    }
+
+    //选择要进行结算的商品
+    var ids = [];
+    var totalaccount = 0;
+    function cbclick(index){
+        document.getElementById("totalbook").innerHTML = ""
+        document.getElementById("hidden").innerHTML = ""
+        var cbox = document.getElementsByClassName("vehicle")[index].checked
+        console.log("cbox:",cbox);
+        if(cbox == true){
+            $.ajax({
+                url: "/laofuzi/cart/findByUserId",
+                type: "POST",
+                dataType:"json",
+                contentType: 'application/json',
+                data: JSON.stringify({"userId":userid}),
+                async: false,
+                success: function(result){
+                    console.log(result);
+                    ids.push(result[index].bookId);
+                    totalaccount += result[index].unitprice*result[index].number
+                }
+            });
+        }else{
+            document.getElementsByClassName("vehicle")[index].checked = false;
+            $.ajax({
+                url: "/laofuzi/cart/findByUserId",
+                type: "POST",
+                dataType:"json",
+                contentType: 'application/json',
+                data: JSON.stringify({"userId":userid}),
+                async: false,
+                success: function(result){
+                    console.log(result);
+                    for(var i = 0; i < ids.length; i++){
+                        if(ids[i] == result[index].bookId){
+                            ids.splice(i,1);
+                            totalaccount -= result[index].unitprice*result[index].number
+                        }
+                    }
+                }
+            });
+        }
+        console.log("idsww:",ids,totalaccount);
+        $("#hidden").append("<p class='hidden' style='display: none'>"+ids+"</p>");
+        var pp = document.getElementsByClassName("hidden");
+        var idss = pp[pp.length - 1].innerText.split(",");
+        if(idss.length == 1 && idss[0] == ""){
+            $("#totalbook").append("<span><strong>0</strong></span>&nbsp;件商品");
+            document.getElementById("totalprice").innerText = "0"
+        }else{
+            $("#totalbook").append("<span><strong>"+idss.length+"</strong></span>&nbsp;件商品");
+            document.getElementById("totalprice").innerText = totalaccount
+        }
+    }
+
+
+    document.getElementById("pay").onclick = function(){
+        if(ids == []){
+            alert("请选择需要进行结算的商品！");
+        }else{
+            var pp = document.getElementsByClassName("hidden");
+            ids = pp[pp.length - 1].innerText.split(",");
+            if(ids[0] == ""){
+                alert("请选择需要进行结算的商品！");
+            }else{
+                window.localStorage.setItem('ids',ids);
+                window.location.href = "pay";
+            }
+        }
+    }
+
+
+    //显示搜索框下方的热销书籍
+    $.ajax({
+        url: "/laofuzi/book/findAll",
+        type: "POST",
+        dataType:"json",
+        contentType : 'application/json',
+        data: "",
+        async: false,
+        success: function(result){
+            console.log(result);
+            for(var j = 0; j < 5; j++){
+                var bookpop = "<a href=\"javascript:bookclick("+result[j].categoryId+","+result[j].id+");\">"+
+                    result[j].name +"</a>";
+                $("#popular").append(bookpop);
+            }
+        }
+    });
+
+
 </script>
 <script src="/laofuzi/js/index.js"></script>
 <script src="/laofuzi/js/public.js"></script>
