--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -36,7 +36,6 @@
             </div>
         </div>
     </div>
-
     <div class="top">
         <div class="logo">
             <a href="#"><img src="/laofuzi/images/lfz.png" /></a>
@@ -58,8 +57,7 @@
             <div class="dreamcrub">
                 <ul class="breadcrumbs">
                     <li class="home">
-                        <a href="index" title="返回首页">首页</a>&nbsp;
-                        <span>&gt;</span>
+                        <a href="index" title="返回首页">首页</a>&nbsp;<span>&gt;</span>
                     </li>
                     <li class="women">提交订单</li>
                 </ul>
@@ -70,18 +68,12 @@
             </div>
             <div id="useraddress" class="content address" style="margin: 30px;">
             </div>
-
             <div id="userorders" class="shopping_cart shop"></div>
             <div class="clearfix"> </div>
             <div class="fr">
-                <div id="amount" class="amount">
-
-                </div>
+                <div id="amount" class="amount"></div>
                 <input id="singlebtn" type="submit" class='singlebtn' value="提交订单" title=""/>
             </div>
-
-
-
         </div>
     </div>
 </div>
@@ -97,11 +89,6 @@
 </body>
 <script type="text/javascript" src="/laofuzi/js/base.js"></script>
 <script>
-    document.getElementById("singlebtn").onclick = function(){
-        alert("提交成功！");
-        window.location.href = "order";
-    }
-
     //判断顶部导航显示信息
     if(userid != undefined | userid != "" | userid != "null"){
         var infouser = "欢迎! &nbsp;<a href=\"#\" style=\"color:#ff4e00;\">"+ user +"</a>&nbsp;|&nbsp;\n" +
@@ -111,7 +98,7 @@
             "<a href=\"login\" style=\"color:#ff4e00;\">退出</a>";
     }
     $("#userinfo").append(infouser);
-    //显示书籍列表以及搜索框下方的热销书籍
+    //搜索功能
     function search() {
         var keywords = document.getElementById("search").value;
         $.ajax({
@@ -128,6 +115,7 @@
             }
         });
     }
+
     //左侧书籍类别
     $(function() {
         var menu1_ul = $('.menu1> li > ul'),
@@ -179,6 +167,7 @@
             }
         }
     });
+
     //显示登录用户的购物车信息
     $.ajax({
         url: "/laofuzi/cart/findByUserId",
@@ -189,30 +178,47 @@
         async: false,
         success: function(result){
             console.log(result);
-            console.log(result[0].img);
             if(result.length <= 0){
                 var cartpro = "<li class=\"noshop\">\n" +
                     "<img src=\"/laofuzi/images/icon_tips2.png\" alt=\"\" />\n" +
                     "<h3>你的购物车还是空的</h3>\n</li>";
                 $("#lfzcart").append(cartpro);
-            }
-            for(var i=0 ; i < 3; i++ ){
-                var cartpro = "<li>\n" +
-                    "<div class=\"clear\">\n<div class=\"shopImg\">";
-                cartpro +=  "<img src=\""+ result[i].img +"\" alt=\"\" />\n</div>\n" +
-                    "<div class=\"shopText\">\n<div class=\"clear\">";
-                cartpro += "<h5>"+ result[i].name +"</h5>\n" +
-                    "<a href=\"#\" class=\"close J_btnDelete\">X</a>\n" +
-                    "</div>\n<div class=\"clear\">\n<div class=\"plush\">\n" +
-                    "<span class=\"J_btnDelCount\">-</span>\n" +
-                    "<input class=\"J_inputCount\" type=\"text\" value=\""+ result[i].number +"\" />\n" +
-                    "<span class=\"J_btnAddCount\">+</span>\n</div>\n" +
-                    "<strong class=\"J_smallTotalPrice\">"+ result[i].unitprice +"</strong>\n" +
-                    "</div>\n</div>\n</div>\n</li>";
-                $("#lfzcart").append(cartpro);
+            }else if(result.length >= 3){
+                for(var i=0 ; i < 3; i++ ){
+                    var cartpro = "<li>\n" +
+                        "<div class=\"clear\">\n<div class=\"shopImg\">";
+                    cartpro +=  "<img src=\""+ result[i].img +"\" alt=\"\" />\n</div>\n" +
+                        "<div class=\"shopText\">\n<div class=\"clear\">";
+                    cartpro += "<h5>"+ result[i].name +"</h5>\n" +
+                        "<a href=\"#\" class=\"close J_btnDelete\">X</a>\n" +
+                        "</div>\n<div class=\"clear\">\n<div class=\"plush\">\n" +
+                        "<span class=\"J_btnDelCount\">-</span>\n" +
+                        "<input class=\"J_inputCount\" type=\"text\" value=\""+ result[i].number +"\" />\n" +
+                        "<span class=\"J_btnAddCount\">+</span>\n</div>\n" +
+                        "<strong class=\"J_smallTotalPrice\">"+ result[i].unitprice +"</strong>\n" +
+                        "</div>\n</div>\n</div>\n</li>";
+                    $("#lfzcart").append(cartpro);
+                }
+            }else{
+                for(var i=0 ; i < result.length; i++ ){
+                    var cartpro = "<li>\n" +
+                        "<div class=\"clear\">\n<div class=\"shopImg\">";
+                    cartpro +=  "<img src=\""+ result[i].img +"\" alt=\"\" />\n</div>\n" +
+                        "<div class=\"shopText\">\n<div class=\"clear\">";
+                    cartpro += "<h5>"+ result[i].name +"</h5>\n" +
+                        "<a href=\"#\" class=\"close J_btnDelete\">X</a>\n" +
+                        "</div>\n<div class=\"clear\">\n<div class=\"plush\">\n" +
+                        "<span class=\"J_btnDelCount\">-</span>\n" +
+                        "<input class=\"J_inputCount\" type=\"text\" value=\""+ result[i].number +"\" />\n" +
+                        "<span class=\"J_btnAddCount\">+</span>\n</div>\n" +
+                        "<strong class=\"J_smallTotalPrice\">"+ result[i].unitprice +"</strong>\n" +
+                        "</div>\n</div>\n</div>\n</li>";
+                    $("#lfzcart").append(cartpro);
+                }
             }
         }
     });
+
     //显示书籍列表以及搜索框下方的热销书籍
     $.ajax({
         url: "/laofuzi/book/findAll",
@@ -241,6 +247,7 @@
         }
     });
 
+    //显示用户的地址信息
     $.ajax({
         url: "/laofuzi/address/findAll",
         type: "POST",
@@ -260,69 +267,59 @@
             }
         }
     });
-    // $.ajax({
-    //     url: "/laofuzi/order/createOrderByCart",
-    //     type: "POST",
-    //     dataType:"json",
-    //     contentType : 'application/json',
-    //     data: JSON.stringify({"userId":userid,"bookId":bookid,"id":"1"}),
-    //     async: false,
-    //     success: function(result){
-    //         console.log("create:",result);
-    //     }
-    // });
+
     //显示用户的结算信息
+    var idss = ids.split(",");
+    console.log("iidsss:",idss);
     $.ajax({
-        url: "/laofuzi/order/selectByUserId",
+        url: "/laofuzi/order/createOrderByCart",
         type: "POST",
         dataType:"json",
         contentType : 'application/json',
-        data: JSON.stringify({"userId":userid,"status":""}),
+        data: JSON.stringify({"addressId":"1",
+            "userId":userid,
+            "cartList":idss
+        }),
         async: false,
         success: function(result){
-            console.log("orders:",result);
-            for(var i=0; i< result.length; i++){
-                if(result[i].status == "0"){
-                    var index = i;
-                }
-            }
-            var date = new Date(+new Date()+8*3600*1000).toISOString().replace(/T/g,' ').replace(/\.[\d]{3}Z/,'');
-
+            console.log("addcart:",result);
             var orders = "<h4 class=\"orderinfo\">\n" +
-                "<span>订单编号："+ result[index].id +"&nbsp;&nbsp;&nbsp;&nbsp; </span>\n" +
-                "<span>下单日期："+ date +"&nbsp;&nbsp;&nbsp;&nbsp; </span>\n" +
+                "<span>订单编号："+ result.order.id +"&nbsp;&nbsp;&nbsp;&nbsp; </span>\n" +
+                "<span>下单日期："+ formatDate(result.order.createTime) +"&nbsp;&nbsp;&nbsp;&nbsp; </span>\n" +
                 "<div class=\"caozuo\">\n"
             orders += "</div>\n</h4>";
-            $.ajax({
-                url: "/laofuzi/order_items/findDetailByOrderId",
-                type: "POST",
-                dataType:"json",
-                contentType : 'application/json',
-                data: JSON.stringify({"orderId":result[index].id}),
-                async: false,
-                success: function(data){
-                    console.log("orderitems",data);
-                    for(var j=0; j < data.length; j++){
-                        orders += "<li>\n<div class=\"cart_box\">\n" +
-                            "<div class=\"message\">\n<div class=\"list_img\">"+
-                            "<img src=\""+data[j].img+"\" class=\"img-responsive\" alt=\"\" /></div>\n" +
-                            "<div class=\"order_desc\">\n<div class=\"clear\">\n" +
-                            "<h5>"+ data[j].bookName +"</h5>\n" +
-                            "<h5>作者："+ data[j].author +"</h5>\n" +
-                            "<h5>数量："+ data[j].quantity +"</h5>\n" +
-                            "<h5>单价："+ data[j].unitprice +"</h5>\n" +
-                            "<h5>小计："+ parseInt(data[j].quantity)*parseFloat(data[j].unitprice) +"</h5>\n" +
-                            "</div>\n</div>\n</div>\n" +
-                            "<div class=\"clearfix\"></div>\n</div>\n</li>";
-                        var aaa = "<div style=\"padding: 20px\">总计："+parseInt(data[j].quantity)*parseFloat(data[j].unitprice)+"</div>"
-                        $("#amount").append(aaa);
-                    }
-                }
-            });
             $("#userorders").append(orders);
+            var data = result.orderitems;
+            for(var j=0; j < data.length; j++){
+                var ordersdetail = "<li>\n<div class=\"cart_box\">\n" +
+                    "<div class=\"message\">\n<div class=\"list_img\">"+
+                    "<img src=\""+data[j].img+"\" class=\"img-responsive\" alt=\"\" /></div>\n" +
+                    "<div class=\"order_desc\">\n<div class=\"clear\">\n" +
+                    "<h5>"+ data[j].name +"</h5>\n" +
+                    "<h5>作者："+ data[j].author +"</h5>\n" +
+                    "<h5>数量："+ data[j].number +"</h5>\n" +
+                    "<h5>单价："+ data[j].unitprice +"</h5>\n" +
+                    "<h5>小计：<span class='xiaoji'>"+ parseInt(data[j].number)*parseFloat(data[j].unitprice) +"</span></h5>\n" +
+                    "</div>\n</div>\n</div>\n" +
+                    "<div class=\"clearfix\"></div>\n</div>\n</li>";
+                $("#userorders").append(ordersdetail);
+            }
+
         }
     });
+    var smalltotal = document.getElementsByClassName("xiaoji");
+    var allaccount = 0;
+    for(var i = 0; i < smalltotal.length; i++){
+        allaccount += parseFloat(smalltotal[i].innerText);
+    }
+    var aaa = "<div style=\"padding: 20px\">总计：￥"+allaccount+"元</div>"
+    $("#amount").append(aaa);
 
+    //提交订单
+    document.getElementById("singlebtn").onclick = function(){
+        alert("提交成功！");
+        window.location.href = "order";
+    }
 </script>
 <script src="/laofuzi/js/index.js"></script>
 <script src="/laofuzi/js/public.js"></script>
