--- a/src/main/resources/templates/CategoryList.html
+++ b/src/main/resources/templates/CategoryList.html
@@ -152,28 +152,45 @@
         async: false,
         success: function(result){
             console.log(result);
-            console.log(result[0].img);
             if(result.length <= 0){
                 var cartpro = "<li class=\"noshop\">\n" +
                     "<img src=\"/laofuzi/images/icon_tips2.png\" alt=\"\" />\n" +
                     "<h3>你的购物车还是空的</h3>\n</li>";
                 $("#lfzcart").append(cartpro);
+            }else if(result.length >= 3){
+                for(var i=0 ; i < 3; i++ ){
+                    var cartpro = "<li>\n" +
+                        "<div class=\"clear\">\n<div class=\"shopImg\">";
+                    cartpro +=  "<img src=\""+ result[i].img +"\" alt=\"\" />\n</div>\n" +
+                        "<div class=\"shopText\">\n<div class=\"clear\">";
+                    cartpro += "<h5>"+ result[i].name +"</h5>\n" +
+                        "<a href=\"#\" class=\"close J_btnDelete\">X</a>\n" +
+                        "</div>\n<div class=\"clear\">\n<div class=\"plush\">\n" +
+                        "<span class=\"J_btnDelCount\">-</span>\n" +
+                        "<input class=\"J_inputCount\" type=\"text\" value=\""+ result[i].number +"\" />\n" +
+                        "<span class=\"J_btnAddCount\">+</span>\n</div>\n" +
+                        "<strong class=\"J_smallTotalPrice\">"+ result[i].unitprice +"</strong>\n" +
+                        "</div>\n</div>\n</div>\n</li>";
+                    $("#lfzcart").append(cartpro);
+                }
+            }else{
+                for(var i=0 ; i < result.length; i++ ){
+                    var cartpro = "<li>\n" +
+                        "<div class=\"clear\">\n<div class=\"shopImg\">";
+                    cartpro +=  "<img src=\""+ result[i].img +"\" alt=\"\" />\n</div>\n" +
+                        "<div class=\"shopText\">\n<div class=\"clear\">";
+                    cartpro += "<h5>"+ result[i].name +"</h5>\n" +
+                        "<a href=\"#\" class=\"close J_btnDelete\">X</a>\n" +
+                        "</div>\n<div class=\"clear\">\n<div class=\"plush\">\n" +
+                        "<span class=\"J_btnDelCount\">-</span>\n" +
+                        "<input class=\"J_inputCount\" type=\"text\" value=\""+ result[i].number +"\" />\n" +
+                        "<span class=\"J_btnAddCount\">+</span>\n</div>\n" +
+                        "<strong class=\"J_smallTotalPrice\">"+ result[i].unitprice +"</strong>\n" +
+                        "</div>\n</div>\n</div>\n</li>";
+                    $("#lfzcart").append(cartpro);
+                }
             }
-            for(var i=0 ; i < 3; i++ ){
-                var cartpro = "<li>\n" +
-                    "<div class=\"clear\">\n<div class=\"shopImg\" onclick='bookclick("+result[i].categoryId+","+result[i].id+")'>";
-                cartpro +=  "<img src=\""+ result[i].img +"\" alt=\"\"/>\n</div>\n" +
-                    "<div class=\"shopText\">\n<div class=\"clear\">";
-                cartpro += "<h5>"+ result[i].name +"</h5>\n" +
-                    "<a href=\"#\" class=\"close J_btnDelete\">X</a>\n" +
-                    "</div>\n<div class=\"clear\">\n<div class=\"plush\">\n" +
-                    "<span class=\"J_btnDelCount\">-</span>\n" +
-                    "<input class=\"J_inputCount\" type=\"text\" value=\""+ result[i].number +"\" />\n" +
-                    "<span class=\"J_btnAddCount\">+</span>\n</div>\n" +
-                    "<strong class=\"J_smallTotalPrice\">"+ result[i].unitprice +"</strong>\n" +
-                    "</div>\n</div>\n</div>\n</li>";
-                $("#lfzcart").append(cartpro);
-            }
+
         }
     });
     $.ajax({
@@ -212,7 +229,7 @@
                     "<div class=\"price\">\n<span>￥"+ result[i].unitprice +"</span>\n" +
                     "</div>\n<div class=\"name\"><a href=\"#\">"+result[i].name+"</a></div>\n" +
                     "<div class=\"carbg\">\n" +
-                    "<a href=\"javascript:addcart("+result[i].id+","+userid+");\" class=\"j_car\">加入购物车</a>\n" +
+                    "<a href=\"javascript:addcart(1,"+result[i].id+","+userid+");\" class=\"j_car\">加入购物车</a>\n" +
                     "</div>\n</li>";
                 $("#catsbook").append(cats);
             }
